# Module36

HW/Task1/: CMakeLists.txt  main.cpp  resources.qrc
HW/Task1_vol2/: CMakeLists.txt  main.cpp  resources.qrc
HW/Task1_vol_2/: CMakeLists.txt
Notes/Note1/: CMakeLists.txt  main.cpp
Notes/Note2/: CMakeLists.txt  main.cpp
Notes/Note3/: CMakeLists.txt  main.cpp
Notes/Note4/: CMakeLists.txt  main.cpp
